Added javascript typing animation to index page

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Welcome to Girl vs Bull, an entirely fresh take on an empowering female podcast experience.">
     <meta name="author" content="Cat Allen & Janelle Poiselle">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400 subset=latin">
+    <script src="js/javascript/style.js"></script>
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <link rel="icon" href="favicon.ico">
   </head>
@@ -29,7 +30,9 @@
       <section class="py-5"><div class="container">
           <div class="row">
             <div class="col-md-6 my-auto">
-              <h1 class="display-4">A podcast experience like no other.</h1>
+              <h1 class="display-4">
+                Girl versus<span class="txt-rotate" data-period="2000" data-rotate='[ " culture.", " workplace.", " relationship.", " sexism.", " bull." ]'></span>
+              </h1>
               <p class="lead text-muted mb-4">We're here to rock your world. Are you ready for some cold, hard truth? </p><a class="btn btn-primary" href="#">Start Listening</a><a class="btn btn-link" href="#">Learn more</a>
             </div>
             <div class="col-md-6"><img class="img-fluid mt-4 mt-md-0" src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c" alt=""></div>
