edited some links and text details

--- a/public/episide-detail.html
+++ b/public/episide-detail.html
@@ -16,37 +16,43 @@
       <nav class="navbar navbar-expand-lg navbar-light"><a class="navbar-brand" href="#">Girl vs Bull</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigations-08" aria-controls="navigations-08" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navigations-08">
-          <ul class="navbar-nav ml-auto"><li class="nav-item"><a class="nav-link active" href="#">About</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Episodes</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Exclusives</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Collaborate</a></li>
+          <ul class="navbar-nav ml-auto"><li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="episodes.html">Episodes</a></li>
+            <li class="nav-item"><a class="nav-link" href="exclusives.html">Exclusives</a></li>
+            <li class="nav-item"><a class="nav-link" href="contact.html">Collaborate</a></li>
           </ul><a class="btn btn-outline-primary mt-2 mt-md-0 ml-lg-3" href="#">Listen Now</a>
         </div>
       </nav>
                 
       <section class="py-5">
         <div class="container text-center">
-          <h2>Why Strong Tea Isn't Good For CEOs</h2>
-          <p>November 14, by <a href="#">Dinesh Chugtai</a></p><img class="img-fluid my-5" src="https://bootstrapshuffle.com/placeholder/pictures/bg_16-9.svg?primary=e83e8c" alt="">
+          <h2>Episode XX: Title Goes Here</h2>
+          <p>April 6, 2020 by <a href="#">Janelle Poiselle</a></p><img class="img-fluid my-5" src="https://bootstrapshuffle.com/placeholder/pictures/bg_16-9.svg?primary=e83e8c" alt="">
           <div class="row text-left">
             <div class="col-lg-8 mx-auto">
-              <p class="lead">An exhaustive guide about how different teas can affect a CEO during their workday.</p>
-              <p>This is a short story about how we uncovered an insane problem with our ICO, fixed it, and still managed to secure vast funding.</p>
+              <p class="lead">This is what the episode is about.</p>
+              <p>Here's some more detail about the episode and a list if you want it:</p>
               <ul>
-                <li>why i'm the best programmer ever</li>
-                <li>secrets of decentralization</li>
-                <li>why strong tea isn't good</li>
-                <li>Capitalize on low hanging fruit to identify a ballpark value added.</li>
+                <li>dum dum dum</li>
+                <li>dum dum dum</li>
+                <li>dum dum dum</li>
+                <li>dum dum dum</li>
               </ul>
-              <p>I feel like not everybody outside of Pied Piper knows it, so I wanted to make it clear why I'm the best programmer in the world.</p>
+              <p>And to wrap it all up here's another paragraph for you to write your magical words of wisdom.</p>
               <blockquote class="blockquote text-center p-5 my-2">
-                <p class="mb-3">"Today's user wants access to all their files, from all of their devices, instantly. That's why cloud-based is the Holy Grail. Now Dropbox is winning. But when it comes to audio and video files, they might as well be called Dripbox."</p>
-                <footer class="blockquote-footer mb-3">Erlich Bachman in
-                  <cite>S01E03</cite>
+                <p class="mb-3">"Super profound quotational area for your discretionary use."</p>
+                <footer class="blockquote-footer mb-3">Master of the Universe
+                  <cite>Book of Brilliance</cite>
                 </footer>
               </blockquote>
-              <p class="mb-3">I feel like not everybody outside of Pied Piper knows it, so I wanted to make it clear why I'm the best programmer in the world.</p>
-              <div><a class="badge badge-pill badge-primary mx-1" href="#">Decentralization</a><a class="badge badge-pill badge-primary mx-1" href="#">Infrastructureless</a><a class="badge badge-pill badge-primary mx-1" href="#">Pied Piper</a><a class="badge badge-pill badge-primary mx-1" href="#">Security</a><a class="badge badge-pill badge-primary mx-1" href="#">Dinesh</a></div>
+              <p class="mb-3">If you want more text here, you can have it, darling.</p>
+              <div>
+                <a class="badge badge-pill badge-primary mx-1" href="#">Workplace</a>
+                <a class="badge badge-pill badge-primary mx-1" href="#">Career</a>
+                <a class="badge badge-pill badge-primary mx-1" href="#">Power to the She</a>
+                <a class="badge badge-pill badge-primary mx-1" href="#">Technology</a>
+                <a class="badge badge-pill badge-primary mx-1" href="#">Relationships</a>
+              </div>
             </div>
           </div>
         </div>
