--- a/public/episodes.html
+++ b/public/episodes.html
@@ -78,19 +78,19 @@
           <div class="card-deck">
             <div class="card border-0 mb-4">
               <div class="py-3 d-flex justify-content-between">
-                <h5 class="mb-0">Workplace</h5><a class="mb-0" href="#">See all</a>
+                <h5 class="mb-0">Workplace</h5><a class="mb-0" href="episode-list.html">See all</a>
               </div><a href="#"><img class="card-img-top" src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c" alt=""></a>
               <div class="card-body text-muted small"><a class="d-flex px-1 py-3 justify-content-between border-bottom" href="#"><span>How to spot a toxic culture</span><span>&rsaquo;</span></a><a class="d-flex px-1 py-3 justify-content-between border-bottom" href="#"><span>Nailing your first interview</span><span>&rsaquo;</span></a><a class="d-flex px-1 py-3 justify-content-between border-bottom" href="#"><span>Why women are integral to success</span><span>&rsaquo;</span></a></div>
             </div>
             <div class="card border-0 mb-4">
               <div class="py-3 d-flex justify-content-between">
-                <h5 class="mb-0">Relationships</h5><a class="mb-0" href="#">See all</a>
+                <h5 class="mb-0">Relationships</h5><a class="mb-0" href="episode-list.html">See all</a>
               </div><a href="#"><img class="card-img-top" src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c" alt=""></a>
               <div class="card-body text-muted small"><a class="d-flex px-1 py-3 justify-content-between border-bottom" href="#"><span>No means no</span><span>&rsaquo;</span></a><a class="d-flex px-1 py-3 justify-content-between border-bottom" href="#"><span>Worst first dates</span><span>&rsaquo;</span></a><a class="d-flex px-1 py-3 justify-content-between border-bottom" href="#"><span>How dating is different in 2020</span><span>&rsaquo;</span></a></div>
             </div>
             <div class="card border-0 mb-4">
               <div class="py-3 d-flex justify-content-between">
-                <h5 class="mb-0">Current Events</h5><a class="mb-0" href="#">See all</a>
+                <h5 class="mb-0">Current Events</h5><a class="mb-0" href="episode-list.html">See all</a>
               </div><a href="#"><img class="card-img-top" src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c" alt=""></a>
               <div class="card-body text-muted small"><a class="d-flex px-1 py-3 justify-content-between border-bottom" href="#"><span>Pandemic hysteria</span><span>&rsaquo;</span></a><a class="d-flex px-1 py-3 justify-content-between border-bottom" href="#"><span>Tech trends - April 2020</span><span>&rsaquo;</span></a><a class="d-flex px-1 py-3 justify-content-between border-bottom" href="#"><span>Being fiscally responsible as a millennial</span><span>&rsaquo;</span></a></div>
             </div>
