--- a/episodes.html
+++ b/episodes.html
@@ -4,22 +4,22 @@
     <title>Page title</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Girl vs Bull: A podcast experience like no other">
+    <meta name="author" content="Janelle Poiselle &amp; Cat Allen">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400&amp;amp;subset=latin">
     <link rel="stylesheet" href="css/bootstrap/bootstrap-theme.css">
     <link rel="icon" href="favicon.ico">
   </head>
   <body>
     <div class="container-fluid">
-      <nav class="navbar navbar-expand-lg navbar-light"><a class="navbar-brand" href="#">Girl vs Bull</a>
+      <nav class="navbar navbar-expand-lg navbar-light"><a class="navbar-brand" href="index.html">Girl vs Bull</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigations-08" aria-controls="navigations-08" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navigations-08">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link active" href="#">About<span class="sr-only">(current)</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Episodes</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Exclusives</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Collaborate</a></li>
+            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+            <li class="nav-item"><a class="nav-link active" href="episodes.html">Episodes<span class="sr-only">(current)</span></a></li>
+            <li class="nav-item"><a class="nav-link" href="exclsives.html">Exclusives</a></li>
+            <li class="nav-item"><a class="nav-link" href="contact.html">Collaborate</a></li>
           </ul><a class="btn btn-outline-primary mt-2 mt-md-0 ml-lg-3" href="#">Listen Now</a>
         </div>
       </nav>
@@ -98,15 +98,15 @@
         <div class="container">
           <div class="row d-flex justify-content-between flex-column flex-lg-row align-items-center">
             <ul class="nav justify-content-center my-3 my-lg-0">
-              <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Episodes</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Exclusives</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Collaborate</a></li>
+              <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+              <li class="nav-item"><a class="nav-link" href="episodes.html">Episodes</a></li>
+              <li class="nav-item"><a class="nav-link" href="exclusives.html">Exclusives</a></li>
+              <li class="nav-item"><a class="nav-link" href="contact.html">Collaborate</a></li>
             </ul>
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"><a class="btn btn-primary d-flex m-2 m-sm-0 mr-sm-3" href="#"><img class="mr-2" src="placeholder/icons/apple.svg" alt="">
-                <div class="d-flex flex-column text-white"><small class="m-0">Download on the</small><span class="m-0 font-weight-bold">Apple Store</span></div></a><a class="btn btn-primary d-flex m-2 m-sm-0" href="#"><img class="mr-2" src="placeholder/icons/google.svg" alt="">
-                <div class="d-flex flex-column text-white"><small class="m-0">Get it on</small><span class="m-0 font-weight-bold">Google Play</span></div></a></div>
+                <div class="d-flex flex-column text-white"><small class="m-0">Download on the</small><span class="m-0 font-weight-bold">Apple Podcasts</span></div></a><a class="btn btn-primary d-flex m-2 m-sm-0" href="#"><img class="mr-2" src="placeholder/icons/google.svg" alt="">
+                <div class="d-flex flex-column text-white"><small class="m-0">Get it on</small><span class="m-0 font-weight-bold">Google Podcasts</span></div></a></div>
             <div class="w-100 border-top my-3"></div>
           </div>
           <div class="d-flex flex-column flex-sm-row align-items-center justify-content-sm-between">
