--- a/public/episode-list.html
+++ b/public/episode-list.html
@@ -71,7 +71,7 @@
               <li class="nav-item"><a class="nav-link" href="contact.html">Collaborate</a></li>
             </ul>
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"><a class="btn btn-primary d-flex m-2 m-sm-0 mr-sm-3" href="#"><img class="mr-2" src="placeholder/icons/apple.svg" alt="">
-                <div class="d-flex flex-column text-white"><small class="m-0">Download on the</small><span class="m-0 font-weight-bold">Apple Podcasts</span></div></a><a class="btn btn-primary d-flex m-2 m-sm-0" href="#"><img class="mr-2" src="placeholder/icons/google.svg" alt="">
+                <div class="d-flex flex-column text-white"><small class="m-0">Listen on</small><span class="m-0 font-weight-bold">Apple Podcasts</span></div></a><a class="btn btn-primary d-flex m-2 m-sm-0" href="#"><img class="mr-2" src="placeholder/icons/google.svg" alt="">
                 <div class="d-flex flex-column text-white"><small class="m-0">Get it on</small><span class="m-0 font-weight-bold">Google Podcasts</span></div></a></div>
             <div class="w-100 border-top my-3"></div>
           </div>
