--- a/public/episodes.html
+++ b/public/episodes.html
@@ -18,7 +18,7 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
             <li class="nav-item"><a class="nav-link active" href="episodes.html">Episodes<span class="sr-only">(current)</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="exclsives.html">Exclusives</a></li>
+            <li class="nav-item"><a class="nav-link" href="exclusives.html">Exclusives</a></li>
             <li class="nav-item"><a class="nav-link" href="contact.html">Collaborate</a></li>
           </ul><a class="btn btn-outline-primary mt-2 mt-md-0 ml-lg-3" href="#">Listen Now</a>
         </div>
@@ -105,7 +105,7 @@
               <li class="nav-item"><a class="nav-link" href="contact.html">Collaborate</a></li>
             </ul>
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"><a class="btn btn-primary d-flex m-2 m-sm-0 mr-sm-3" href="#"><img class="mr-2" src="placeholder/icons/apple.svg" alt="">
-                <div class="d-flex flex-column text-white"><small class="m-0">Download on the</small><span class="m-0 font-weight-bold">Apple Podcasts</span></div></a><a class="btn btn-primary d-flex m-2 m-sm-0" href="#"><img class="mr-2" src="placeholder/icons/google.svg" alt="">
+                <div class="d-flex flex-column text-white"><small class="m-0">Listen on</small><span class="m-0 font-weight-bold">Apple Podcasts</span></div></a><a class="btn btn-primary d-flex m-2 m-sm-0" href="#"><img class="mr-2" src="placeholder/icons/google.svg" alt="">
                 <div class="d-flex flex-column text-white"><small class="m-0">Get it on</small><span class="m-0 font-weight-bold">Google Podcasts</span></div></a></div>
             <div class="w-100 border-top my-3"></div>
           </div>
