--- a/episodes.html
+++ b/episodes.html
@@ -32,8 +32,8 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col-md-5 mb-4 mb-md-0"><a href="#"><img class="img-fluid" src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c" alt=""></a></div>
-                    <div class="col-md-7"><a class="badge badge-primary px-2" href="#">Relationships</a>
-                      <h5 class="card-title my-2"><a href="#">Doing the Right Thing</a></h5>
+                    <div class="col-md-7"><a class="badge badge-primary px-2" href="#">Life</a>
+                      <h5 class="card-title my-2"><a href="episode-1-look-at-her-now.html">Episode 1: Look at her Now</a></h5>
                       <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.</p><a href="#">Listen Now</a>
                     </div>
                   </div>
@@ -44,7 +44,39 @@
                   <div class="row">
                     <div class="col-md-5 mb-4 mb-md-0"><a href="#"><img class="img-fluid" src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c" alt=""></a></div>
                     <div class="col-md-7"><a class="badge badge-primary px-2" href="#">Workplace</a>
-                      <h5 class="card-title my-2"><a href="#">How to Spot a Toxic Work Culture</a></h5>
+                      <h5 class="card-title my-2"><a href="episode-2-new-beginnings.html">Episode 2: New Beginnings</a></h5>
+                      <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.</p><a href="#">Read more</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-5">
+              <div class="card"><a href="#"><img class="card-img-top" src="https://bootstrapshuffle.com/placeholder/pictures/bg_16-9.svg?primary=e83e8c" alt=""></a>
+                <div class="card-body"><a class="badge badge-primary px-2" href="#">Culture</a>
+                  <h5 class="card-title my-2"><a href="episode-3-i-want-more.html">Episode 3: I Want More.</a></h5>
+                  <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.</p><a href="#">Read more</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-7">
+              <div class="card mb-4">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-md-5 mb-4 mb-md-0"><a href="#"><img class="img-fluid" src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c" alt=""></a></div>
+                    <div class="col-md-7"><a class="badge badge-primary px-2" href="#">Relationships</a>
+                      <h5 class="card-title my-2"><a href="episode-4-managing-men.html">Episode 4: Managing Men</a></h5>
+                      <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.</p><a href="#">Listen Now</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card mb-4">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-md-5 mb-4 mb-md-0"><a href="#"><img class="img-fluid" src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c" alt=""></a></div>
+                    <div class="col-md-7"><a class="badge badge-primary px-2" href="#">Workplace</a>
+                      <h5 class="card-title my-2"><a href="episode-5-slack(er)-culture.html">Episode 5: Slack(er) Culture</a></h5>
                       <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.</p><a href="#">Read more</a>
                     </div>
                   </div>
@@ -54,42 +86,10 @@
             <div class="col-lg-5">
               <div class="card"><a href="#"><img class="card-img-top" src="https://bootstrapshuffle.com/placeholder/pictures/bg_16-9.svg?primary=e83e8c" alt=""></a>
                 <div class="card-body"><a class="badge badge-primary px-2" href="#">Workplace</a>
-                  <h5 class="card-title my-2"><a href="#">Learning from Failures</a></h5>
+                  <h5 class="card-title my-2"><a href="episode-6-those-who-cant-say-they-did.html">Episode 6: Those Who Can't Say They Did</a></h5>
                   <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.</p><a href="#">Read more</a>
                 </div>
               </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="py-5">
-        <div class="container">
-          <div class="row mb-4 text-center text-lg-left">
-            <div class="col-lg-6">
-              <h2>Episodes by Category</h2>
-            </div>
-            <div class="col-lg-6">
-              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.</p>
-            </div>
-          </div>
-          <div class="card-deck">
-            <div class="card border-0 mb-4">
-              <div class="py-3 d-flex justify-content-between">
-                <h5 class="mb-0">Workplace</h5><a class="mb-0" href="#">See all</a>
-              </div><a href="#"><img class="card-img-top" src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c" alt=""></a>
-              <div class="card-body text-muted small"><a class="d-flex px-1 py-3 justify-content-between border-bottom" href="#"><span>How to spot a toxic culture</span><span>&rsaquo;</span></a><a class="d-flex px-1 py-3 justify-content-between border-bottom" href="#"><span>Nailing your first interview</span><span>&rsaquo;</span></a><a class="d-flex px-1 py-3 justify-content-between border-bottom" href="#"><span>Why women are integral to success</span><span>&rsaquo;</span></a></div>
-            </div>
-            <div class="card border-0 mb-4">
-              <div class="py-3 d-flex justify-content-between">
-                <h5 class="mb-0">Relationships</h5><a class="mb-0" href="#">See all</a>
-              </div><a href="#"><img class="card-img-top" src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c" alt=""></a>
-              <div class="card-body text-muted small"><a class="d-flex px-1 py-3 justify-content-between border-bottom" href="#"><span>No means no</span><span>&rsaquo;</span></a><a class="d-flex px-1 py-3 justify-content-between border-bottom" href="#"><span>Worst first dates</span><span>&rsaquo;</span></a><a class="d-flex px-1 py-3 justify-content-between border-bottom" href="#"><span>How dating is different in 2020</span><span>&rsaquo;</span></a></div>
-            </div>
-            <div class="card border-0 mb-4">
-              <div class="py-3 d-flex justify-content-between">
-                <h5 class="mb-0">Current Events</h5><a class="mb-0" href="#">See all</a>
-              </div><a href="#"><img class="card-img-top" src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c" alt=""></a>
-              <div class="card-body text-muted small"><a class="d-flex px-1 py-3 justify-content-between border-bottom" href="#"><span>Pandemic hysteria</span><span>&rsaquo;</span></a><a class="d-flex px-1 py-3 justify-content-between border-bottom" href="#"><span>Tech trends - April 2020</span><span>&rsaquo;</span></a><a class="d-flex px-1 py-3 justify-content-between border-bottom" href="#"><span>Being fiscally responsible as a millennial</span><span>&rsaquo;</span></a></div>
             </div>
           </div>
         </div>
