--- a/episodes.html
+++ b/episodes.html
@@ -45,28 +45,28 @@
                     <div class="col-md-5 mb-4 mb-md-0"><a href="#"><img class="img-fluid" src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c" alt=""></a></div>
                     <div class="col-md-7"><a class="badge badge-primary px-2" href="#">Workplace</a>
                       <h5 class="card-title my-2"><a href="episode-2-new-beginnings.html">Episode 2: New Beginnings</a></h5>
-                      <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.</p><a href="#">Read more</a>
+                      <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.</p><a href="#">Listen Now</a>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="col-lg-5">
-              <div class="card"><a href="#"><img class="card-img-top" src="https://bootstrapshuffle.com/placeholder/pictures/bg_16-9.svg?primary=e83e8c" alt=""></a>
-                <div class="card-body"><a class="badge badge-primary px-2" href="#">Culture</a>
-                  <h5 class="card-title my-2"><a href="episode-3-i-want-more.html">Episode 3: I Want More.</a></h5>
-                  <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.</p><a href="#">Read more</a>
+              <div class="col-lg-5">
+                <div class="card"><a href="#"><img class="card-img-top" src="https://bootstrapshuffle.com/placeholder/pictures/bg_16-9.svg?primary=e83e8c" alt=""></a>
+                  <div class="card-body"><a class="badge badge-primary px-2" href="#">Culture</a>
+                    <h5 class="card-title my-2"><a href="episode-3-i-want-more.html">Episode 3: I Want More.</a></h5>
+                    <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.</p><a href="#">Listen Now</a>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-lg-7">
-              <div class="card mb-4">
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col-md-5 mb-4 mb-md-0"><a href="#"><img class="img-fluid" src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c" alt=""></a></div>
-                    <div class="col-md-7"><a class="badge badge-primary px-2" href="#">Relationships</a>
-                      <h5 class="card-title my-2"><a href="episode-4-managing-men.html">Episode 4: Managing Men</a></h5>
-                      <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.</p><a href="#">Listen Now</a>
+              <div class="col-lg-7">
+                <div class="card mb-4">
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="col-md-5 mb-4 mb-md-0"><a href="#"><img class="img-fluid" src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c" alt=""></a></div>
+                      <div class="col-md-7"><a class="badge badge-primary px-2" href="#">Relationships</a>
+                        <h5 class="card-title my-2"><a href="episode-4-managing-men.html">Episode 4: Managing Men</a></h5>
+                        <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.</p><a href="#">Listen Now</a>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -77,17 +77,17 @@
                     <div class="col-md-5 mb-4 mb-md-0"><a href="#"><img class="img-fluid" src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c" alt=""></a></div>
                     <div class="col-md-7"><a class="badge badge-primary px-2" href="#">Workplace</a>
                       <h5 class="card-title my-2"><a href="episode-5-slack(er)-culture.html">Episode 5: Slack(er) Culture</a></h5>
-                      <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.</p><a href="#">Read more</a>
+                      <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.</p><a href="#">Listen Now</a>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="col-lg-5">
-              <div class="card"><a href="#"><img class="card-img-top" src="https://bootstrapshuffle.com/placeholder/pictures/bg_16-9.svg?primary=e83e8c" alt=""></a>
-                <div class="card-body"><a class="badge badge-primary px-2" href="#">Workplace</a>
-                  <h5 class="card-title my-2"><a href="episode-6-those-who-cant-say-they-did.html">Episode 6: Those Who Can't Say They Did</a></h5>
-                  <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.</p><a href="#">Read more</a>
+              <div class="col-lg-5">
+                <div class="card"><a href="#"><img class="card-img-top" src="https://bootstrapshuffle.com/placeholder/pictures/bg_16-9.svg?primary=e83e8c" alt=""></a>
+                  <div class="card-body"><a class="badge badge-primary px-2" href="#">Workplace</a>
+                    <h5 class="card-title my-2"><a href="episode-6-those-who-cant-say-they-did.html">Episode 6: Those Who Can't Say They Did</a></h5>
+                    <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis</p><a href="#">Listen Now</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -109,11 +109,11 @@
                 <div class="d-flex flex-column text-white"><small class="m-0">Get it on</small><span class="m-0 font-weight-bold">Google Podcasts</span></div></a></div>
             <div class="w-100 border-top my-3"></div>
           </div>
-          <div class="d-flex flex-column flex-sm-row align-items-center justify-content-sm-between">
-            <p class="mb-0 small text-muted">© 2020 Girl vs Bull. All right reserved.</p><a href="#">Terms and conditions</a>
-          </div>
         </div>
       </footer>
+      <div class="d-flex flex-column flex-sm-row align-items-center justify-content-sm-between">
+        <p class="mb-0 small text-muted">© 2020 Girl vs Bull. All right reserved.</p><a href="#">Terms and conditions</a>
+      </div>
     </div>
     <script src="js/jquery/jquery.min.js"></script>
     <script src="js/popper/popper.min.js"></script>
