--- a/episode-4-managing-men.html
+++ b/episode-4-managing-men.html
@@ -25,8 +25,8 @@
       </nav>
       <section class="py-5">
         <div class="container text-center">
-          <h2>Why Strong Tea Isn't Good For CEOs</h2>
-          <p>November 14, by <a href="#">Dinesh Chugtai</a></p><img class="img-fluid my-5" src="https://bootstrapshuffle.com/placeholder/pictures/bg_16-9.svg?primary=e83e8c" alt="">
+          <h2>Episode 4: Managing Men</h2>
+          <p>November 14</p><img class="img-fluid my-5" src="https://bootstrapshuffle.com/placeholder/pictures/bg_16-9.svg?primary=e83e8c" alt="">
           <div class="row text-left">
             <div class="col-lg-8 mx-auto">
               <p class="lead">An exhaustive guide about how different teas can affect a CEO during their workday.</p>
