--- a/episode-2-new-beginnings.html
+++ b/episode-2-new-beginnings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Page title</title>
+    <title>Episode 2: New Beginnings | Girl vs Bull</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Girl vs Bull: A podcast experience like no other">
