--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="row">
             <div class="col-md-6 my-auto">
               <h1 class="display-4">A podcast experience like no other.</h1>
-              <p class="lead text-muted mb-4">We're here to rock your world. Are you ready for some cold, hard truth?</p><a class="btn btn-primary" href="#">Start Listening</a><a class="btn btn-link" href="#">Learn more</a>
+              <p class="lead text-muted mb-4">Speaking loudly and publicly about the fight for inequality, respect and the challenges of the modern successful female in the digital era. </p><a class="btn btn-primary" href="#">Start Listening</a><a class="btn btn-link" href="#">Learn more</a>
             </div>
             <div class="col-md-6"><img class="img-fluid mt-4 mt-md-0" src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c" alt=""></div>
           </div>
@@ -41,7 +41,7 @@
             <div class="col-md-4 mb-4">
               <div class="card"><img class="card-img-top" src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c" alt="">
                 <div class="card-body">
-                  <h5 class="card-title">Episode One: Title Goes Here</h5>
+                  <h5 class="card-title">Episode 1: Look at her Now</h5>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue,a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris                 et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.</p><a href="#" role="button">Listen now</a>
                 </div>
               </div>
@@ -49,7 +49,7 @@
             <div class="col-md-4 mb-4">
               <div class="card"><img class="card-img-top" src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c" alt="">
                 <div class="card-body">
-                  <h5 class="card-title">Episode Two: Title Goes Here</h5>
+                  <h5 class="card-title">Episode 2: New Beginnings</h5>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue,a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.</p><a href="#" role="button">Listen now</a>
                 </div>
               </div>
@@ -57,7 +57,7 @@
             <div class="col-md-4 mb-4">
               <div class="card"><img class="card-img-top" src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c" alt="">
                 <div class="card-body">
-                  <h5 class="card-title">Episode Three: Title Goes Here</h5>
+                  <h5 class="card-title">Episode 3: I Want More</h5>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue,a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.</p><a href="#" role="button">Listen now</a>
                 </div>
               </div>
