--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6 my-auto">
-              <h1 class="display-4">A podcast experience like no other.</h1>
-              <p class="lead text-muted mb-4">Speaking loudly and publicly about the fight for inequality, respect and the challenges of the modern successful female in the digital era. </p><a class="btn btn-primary" href="#">Start Listening</a><a class="btn btn-link" href="#">Learn more</a>
+              <h1 class="display-4">Girl vs 
+                <div class="script"> 
+                  <TxtRotate txt-rotate="[&quot; Culture.&quot;,&quot; Workplace.&quot;,&quot; Relationship.&quot;,&quot; Bull.&quot;]" data-period="2000"></TxtRotate>
+                </div>
+              </h1>
+              <p class="lead text-muted mb-4">This is where we should put our profound intro sentence. </p><a class="btn btn-primary" href="#">Start Listening</a><a class="btn btn-link" href="#">Learn more</a>
             </div>
             <div class="col-md-6"><img class="img-fluid mt-4 mt-md-0" src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c" alt=""></div>
           </div>
